[project]
name = "pewterfelt-tag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.4.248",
    "flask[async]>=3.1.0",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.2.4",
    "langchain-ollama>=0.2.3",
]

[tool.basedpyright]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportAny = false
