[project]
name = "pewterfelt-tag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[async]>=3.1.0",
    "langchain-core>=0.3.37",
    "langchain-google-genai>=2.0.10",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]

[tool.basedpyright]
typeCheckingMode = 'recommended'
